[package]
name = "cert"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
bytes = "1.0.1"
chrono = "0.4.19"
ed25519-dalek = "1.0.1"
pem = "0.8.3"
protobuf = "2.24.1"
rand = "0.7.0"
thiserror = "1.0.25"
x25519-dalek = "1.1.1"
