[package]
name = "tunnel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
tokio = {version = "1.7.1", features = ["full"]}
tokio-tun = "0.3.13"
config = {path = "../config" }
simplelog = "0.10.0"
log = "0.4.14"
